refactor: spotless apply & warns fix